# Chess

./: .gitignore  CMakeLists.txt  game_gui.cpp  gui  main.cpp  myproject
include/: chess.hpp
src/: chess.cpp
